--- a/fhy/style/knowledge.css
+++ b/fhy/style/knowledge.css
@@ -4,6 +4,8 @@ body{
 	background-color: #f6f6f6;
 	min-height: 700px;
 }
+
+#center { margin-left: auto; margin-right: auto; }
 a{
 	text-decoration: none;
 }
@@ -16,7 +18,7 @@ a{
 	height: 42; 
 	margin:0px auto 0px auto;
 	background-size: 100% 100%;
-	background-repeat: repeat-x;
+
 }
 #banner_box{
 	position: absolute;
@@ -52,60 +54,61 @@ a{
 	float: right;
 	margin: 2px 5px auto 5px;
 }
-#white_big_box{
-	position: absolute;
-	top: 110px;
-	left: 40px;
-	right: 40px;	
-	width: auto;
-	height: 50%;
-	min-width: 900px;
-	min-height: 400px;
-	background-color: white;
-	z-index: 10;
-}
-.box_of_applicants{
-	position: relative;
+#search_box{
+
+	margin: 30px 0 0 0;
 	width: 100%;
-	height: 100px;
-	border-bottom: 1px solid #bcbcbc;
+	height: 36px;
+
 }
-.pic_of_applicants{
-	position: absolute;
-	top: 50%;
-	margin-top: -30px;
-	left: 20px;
-	width: 61px;
-	height: 61px;
+#search_frame{
+	position: relative;
+	margin: 0 auto 0 auto;
+	width: 47.6%;
+	height: 36px;
+	background-color: white;
 }
-.word_of_applicants{
-	position: absolute;
-	top: 50%;
-	margin-top: -10px;
-	left: 101px;
+#search_frame_text{
+	float: left;
+	width: 70%;
+	height: 36px;
 }
-#bt_yes{
+
+#search_frame_pic{
 	position: absolute;
-	top: 50%;
-	right: 88px;
-	width: 68px;
-	height: 44px;
-	margin-top: -22px;
-	border-radius:8px;
-	border: 1px solid #bcbcbc;
-	background: white;
-	font-size: 18; 
-	font-family: "宋体";  
+	top: 0px;
+	right: 0px;
+	z-index: 99;
+	width: 40px;
+	height: 36px;
 }
-#bt_no{
+#nav_bt{
 	position: absolute;
-	top: 50%;
-	right: 10px;
-	width: 68px;
-	height: 44px;
-	margin-top: -22px;
-	border-radius:8px;
-	border: 1px solid #bcbcbc;
-	background: white; 
-	font-size: 18; 
+	top: 72px;
+	right: 11%;
+	width: 40px;
+	height: 36px;
+}
+#sub_nav{
+	position: absolute;
+	top: 108px;
+	right: 11%;
+	height: 234px;
+	width: 222px;
+	background-color: white;
+	z-index:2;
+}
+#nav_pic_box{
+	position: absolute;
+	top: 108px;
+	right: 11%;
+	width: 222px;
+	height: 234px;
+	padding: 10px 0 0 0;
+	background-color: white;
+}
+.nav_pic{
+	float: right;
+	margin: 10px 12px 10px 12px;
+
 }
