--- a/style/myInformationPage.css
+++ b/style/myInformationPage.css
@@ -11,64 +11,137 @@ a{
    color:#01b37a;
    font-size:16px;
 }
+#p{
+    clear:left;
+    float:left;
+
+}
  #morePageInformationShowDiv
  {
  	width:78%;       
  	min-height:210px;
+    min-width:780px;
  	background-color:#ffffff;
  	margin-top:40px;
     border-bottom:1px solid #e4e4e4;
-    min-width:780px;
     margin: 0px auto;
 }
-#userHeadImage{
+#userHeadImageDiv{
     clear:left;
     float:left;
-    margin-left:17px;
-    margin-top:29px;
+    margin-left:21px;
+    margin-top:41px;
+   
 }
-#userInformation{
-    height:154px;
+#userInformationDiv{
+    /*height:154px;*/
     float:left;
-    margin-left:20px;   
+    margin-left:22px;  
+    margin-top:41px; 
+
 }
 .informationContextName{
     clear:left;
     float:left;
     margin-bottom:20px;
-    margin-top:20px; 
+   
 }
 .informationContextEmail{
     float:left;
     clear:left;
-    margin-bottom:20px;
+    margin-bottom:12px;
 }
 .informationContextIsorNotDiv{
     float:left;
-    clear:left;
-    height:25px;
-   
+    clear:left;   
 }
-#checkboxStyleDiv{
-    
-    height:25px;
+.postList{
     clear:left;
     float:left;
-    line-height:25px;
+    margin-left:21px;
+    margin-top:30px;
+}
+.moreThan{
+    float:left;
+    margin-left:17px;
+    margin-top:30px;
+}
+.myInformationPageText
+{   width:78%;
+    min-width:780px;
+    min-height:170px;
+    background-color:#ffffff;
+    border-top:1px   solid #e4e4e4;
+    border-bottom:1px  solid #e4e4e4;
+    margin:0px auto;
    
 }
-#checkboxStyle{
-    width:25px;
-    height:25px; 
-    vertical-align:-2px;  
-}
-#checkboxTextDiv{
-    /*height:26px;*/
-    height:25px;
+.horizontal-List
+{  
+    width:94.358974358974%;
+   
+    min-height:50px; 
+    position:relative;
+    top:0px;
+    left:2.820512820513%;
+    border-bottom:1px solid #e4e4e4;    
+ }
+ #listTitleContent
+ {  height:50px;
+    float:left;
+    line-height:50px;
+
+ }
+#dateTimeContent
+ {  height:50px;
+    float:right;
+    line-height:50px; 
+ }
+ #goodsList{
+    width:78%;
+    min-width:780px;
+    min-height:244px;
+    background-color:#ffffff;
+    border-top:1px   solid #e4e4e4;
+    border-bottom:1px  solid #e4e4e4;
+    margin:0px auto;
+ }
+ .goodsListImage{
+    clear:left;
+    float:left;
+    margin-left:30px;
+    padding-top:19px;  
+ }
+ .goodsListText{
     float:left;
     margin-left:10px;
-    line-height:25px;
-    /* line-height:20px;*/
+    height:95px;
+    line-height:95px;
+
+ }
+/*
+#checkboxStyleDiv{
+  
+    height:27px;
+    clear:left;
+    float:left; 
+    margin-top:10px;
+   
+
+}
+#checkboxStyle{
+    width:2px;
+    height:27px; 
+    
+}
+#checkboxTextDiv{
+  
+    height:27px;
+    float:left;
+    margin-left:10px;
+   
+    margin-top:10px;
+    
 }
 #issuedList{
     min-width:780px; 
@@ -83,9 +156,6 @@ a{
     float:left;
     margin-left:20px;
     margin-top:10px;
-    /*position:relative;
-    left:21px;
-    bottom:10px;*/
 }
 
 .moreThan{
@@ -107,7 +177,7 @@ a{
 .horizontal-List
 {  
     width:94.358974358974%;
-    /*min-width:736px;*/
+   
     min-height:50px; 
     position:relative;
     top:0px;
@@ -133,8 +203,6 @@ a{
     border-top:1px   solid #e4e4e4;
     border-bottom:1px  solid #e4e4e4;
     margin:0px auto;
-   
-
  }
  .goodsListImage{
     clear:left;
@@ -148,7 +216,7 @@ a{
     height:95px;
     line-height:95px;
 
- }
+ }*/
 
 
 
