--- a/style/armyHomePage.css
+++ b/style/armyHomePage.css
@@ -11,16 +11,25 @@
 }
 body{ 
 	font-family:"宋体";
+    
 	background-color: #f6f6f6;
 	min-height: 700px;
 }
 a{
 	text-decoration: none;
 }
+span{
+   color:#ffffff;
+
+}
 #navBackground{  
 	background-image:url(../images/login_02.png);
 
 	background-size:100% 100%;                /**导航背景图片*/
+
+}
+.liStyle{
+  padding-top:5px;
 
 }
 #fontStyle{
