--- a/style/armyCreate.css
+++ b/style/armyCreate.css
@@ -11,7 +11,7 @@
 
 }
 #navBackground{  
-	background-image:url(../images/login_02.png);
+	background-image:url(../img/login_02.png);
 
 	background-size:100% 100%;                /**导航背景图片*/
 
