--- a/style/armyHomePage.css
+++ b/style/armyHomePage.css
@@ -1,17 +1,4 @@
-* {margin:0; padding:0; border:0;}
-#banner_background {
-	position: relative; 
-	background-image:url(../images/login_02.png); 
-	min-width: 900px;
-	width: auto; 
-	height: 42; 
-	margin:0px auto 0px auto;
-	background-size: 100% 100%;
-
-}
-#Body{ 
-	
-    
+#Body{
 	background-color:#f6f6f6;
 	min-height: 700px;
 }
@@ -19,25 +6,23 @@ a{
 	text-decoration: none;
 }
 span{
-   color:#ffffff;
+    color:#ffffff;
 
 }
-.rightNavliDivStyle{
-  padding-top:5px;
-
+.rightNavliDivStyle
+{
+     padding-top:5px;
 }
 #navBackground{  
-	background-image:url(../images/login_02.png);
 
-	background-size:100% 100%;                /**导航背景图片*/
+	 background-image:url(../img/login_02.png);
+	 background-size:100% 100%;                /**导航背景图片*/
 
 }
 
 #fontStyle{
-    
-  
-  font-family:"宋体"; 
-  font-size:20px;
+    font-family:"宋体－简","黑体",serif;
+    font-size:20px;
 }
 
 
@@ -46,8 +31,6 @@ span{
 {
 	background-color:#f6f6f6;
     font-family:"宋体";
-    font-size:18px;
-    color:#040404;
 }
 .morePageInformationShowDiv
  {
