--- a/style/login.css
+++ b/style/login.css
@@ -12,7 +12,7 @@ a{
 }
 #banner_background {
 	position: relative; 
-	background-image:url(../images/login_02.png); 
+	background-image:url(../img/login_02.png); 
 	min-width: 1000px;
 	width: auto; 
 	height: 42px; 
