--- a/style/taskNotification.css
+++ b/style/taskNotification.css
@@ -13,7 +13,7 @@ body
 }
 #navBackground
 {  
-    background-image:url(../images/login_02.png);
+    background-image:url(../img/login_02.png);
     background-size:100% 100%;                  /**导航背景图片*/
 }
 span{
