--- a/style/team_management.css
+++ b/style/team_management.css
@@ -9,7 +9,7 @@ a{
 }
 #banner_background {
 	position: relative; 
-	background-image:url(../images/login_02.png); 
+	background-image:url(../img/login_02.png); 
 	min-width: 900px;
 
 	width: auto; 
