--- a/style/userRegister.css
+++ b/style/userRegister.css
@@ -1,71 +1,115 @@
 body{
     background-color:#f6f6f6;
     min-width:1000px; 
-    font-family:"宋体－简","黑体",serif;  /*无衬线是sans seri*/
-    font-size:20px;
+  
+}
+
+#navBackground
+{  
+  background-image:url(../img/login_02.png);
+
+  background-size:100% 100%;                  /**导航背景图片*/
+}
+#userName
+{
+  height:24px;width:50px;
+}
+#userPassword
+{
+  height:24px;width:53px;
+
+}
+#loginButton{
+  background-image:url(../img/login_02.png);
+  border:0px;
+}
+#registerButton{
+ background-image:url(../img/login_02.png);      /*background-color:transparent； 把按钮内景设置为透明色*/
+ border:0px;
+}
+span
+{
+  color:#FFFFFF;
+
+}
+.fontStyle{
+  padding-top:5px;
+  font-family:"宋体－简","黑体",serif;  /*无衬线是sans seri*/
+  font-size:20px;
+
+}
+.blankContent{
+  height:40px;
+
 }
 #form_top_Content
 {
-  height:80px;
+  min-height:80px;
 }
-#formGroup
+.formGroup
 { 
   width:78%;
   min-width:780px;
   min-height:82px;
   background-color:#ffffff;                      /*表单设置 */
   border:0px;
-  margin-bottom:40px;
   border-radius:5px;
+  margin:0 auto;
 }
-#photoDiv
-{
+.centerStyle{
+  margin:0 auto;
+
+}
+.photoDiv
+{ 
+  clear:left;
   float:left;
   margin-top:12px;
-  margin-left:12px;
-  /*width:61px;
-  height:61px;*/
+  margin-left:15px;
   width:7.8205128205%;
   min-height:61px;
+
 }
-#inputFormDiv
-{ width:90.89743589%; 
+.inputFormDiv
+{ 
+
+  float:left;
+  width:90.89743589%; 
   min-width:709px;
-  min-height:86px;
-  border:0px;  
+  min-height:79px;
+ 
+  /*border:1px  solid #e4e4e4; */
 }
-#photoDivEmail{                               /*表单的图片样式*/
+.inputForm
+{
+  float:left;
+  width:100%;
+  min-width:709px;
+  min-height:79px;
+  border:0px;
+  display:block;
+}
+#photoDivEmail{ 
+   clear:left;                              /*表单的图片样式*/
    float:left;
-   margin-top:20px;
-   margin-left:20px;
+   margin-top:15px;
+   margin-left:15px;
    width:7.8205128205%;
    min-height:61px;
 }
 #photoDivNickname{
    float:left;
-   margin-top:20px;
-   margin-left:20px;
+   margin-top:15px;
+   margin-left:15px;
    width:7.8205128205%;
    min-height:61px;
 }
 
-
-#inputForm
+#registerDiv
 {
- /* min-width:1101px;
-  min-height:85px;
-  border:0px; */
-  width:90.89743589%; 
-  min-width:709px;
-  min-height:86px;
-  border:0px;  
-
-}
-#registerDiv{
   width:12.8205128%;
   min-width:100px;
   min-height:43px; 
-  margin:0 auto;                                 /*让注册按钮居中显示*/ 
-}
-@media  screen and (max-width:767px)              /*对div做响应式设计*/
-{
+  margin:0 auto;   
+}                              /*让注册按钮居中显示*/ 
+
