(#2)(#3)已修改好，另外修改了全部界面的导航字体大小和背景颜色

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -1,7 +1,7 @@
-* {margin:0; padding:0; border:0;}
+﻿* {margin:0; padding:0; border:0;}
 body{ 
 	font-family:"宋体";
-	background-color: #f6f6f6;
+	background-color: #f5f6f6;
 	min-height: 700px;
 
 }
@@ -29,19 +29,28 @@ a{
 }
 .banner_left_text{ 
 	float: left;
-	margin: 11px 11px auto 11px;
-	font-size: 12px; 
+	margin: 9px 11px auto 11px;
+	font-size: 18px; 
 }
 .banner_a{
 	color: #FFFFFF; 
 }
-.banner_right_text{
+
+#banner_right_box{
+	height: 42px;
 	float: right;
-	margin: 11px 5px auto 5px;
-	font-size: 12px;
+	overflow: hidden;
+}
+.banner_right_text{
+	float: left;
+	margin: 9px 5px auto 5px;
+	font-size: 18px;
+}
+.banner_right_text>p{
+	color: white;
 }
 .banner_input{
-	float: right;
+	float: left;
 	width: 48px;
 	height: 24px;
 	margin: 7px 5px 0 5px;
