--- a/style/team_management.css
+++ b/style/team_management.css
@@ -1,7 +1,7 @@
-* {margin:0; padding:0; border:0;}
+﻿* {margin:0; padding:0; border:0;}
 body{ 
 	font-family:"宋体";
-	background-color: #f6f6f6;
+	background-color: #f5f6f6;
 	min-height: 700px;
 }
 a{
@@ -30,7 +30,7 @@ a{
 .banner_left_text{ 
 	float: left;
 	margin: 11px 11px auto 11px;
-	font-size: 12px; 
+	font-size: 18px; 
 }
 .banner_a{
 	color: #FFFFFF; 
@@ -38,7 +38,7 @@ a{
 .banner_right_text{
 	float: right;
 	margin: 11px 5px auto 5px;
-	font-size: 12px;
+	font-size: 18px;
 }
 #banner_right_pic_settings{
 	float: right;
